syntax = "proto3";
package order;

message OrderRequest {
    string OrderID = 1;
    int64 OrderTimeStamp = 2;
}

message OrderInfo {
    string OrderID = 1;
    string OrderName = 2;
    string OrderStatus = 3;
}

service OrderService {
    rpc GetOrderInfo (OrderRequest) returns (OrderInfo);
    rpc GetOrderInfoStream(OrderRequest) returns(stream OrderInfo){};
    rpc GetOrderInfoClientStream(stream OrderRequest) returns(OrderInfo){};
    rpc GetOrderInfo2Stream(stream OrderRequest) returns(stream OrderInfo){};
}

